Change SegmentMetadata.getCrc and getDataCrc to return long (#19629)