@@ -81,11 +81,11 @@ public class UpsertCompactMergeTaskExecutorTest {
     SegmentMetadataImpl segment1 = Mockito.mock(SegmentMetadataImpl.class);
     SegmentMetadataImpl segment2 = Mockito.mock(SegmentMetadataImpl.class);
 
-    Mockito.when(segment1.getCrc()).thenReturn("1000");
-    Mockito.when(segment2.getCrc()).thenReturn("2000");
+    Mockito.when(segment1.getCrc()).thenReturn(1000L);
+    Mockito.when(segment2.getCrc()).thenReturn(2000L);
 
     List<SegmentMetadataImpl> segmentMetadataList = Arrays.asList(segment1, segment2);
-    List<String> expectedCRCList = Arrays.asList("1000", "2000");
+    List<Long> expectedCRCList = List.of(1000L, 2000L);
 
     _taskExecutor.validateCRCForInputSegments(segmentMetadataList, expectedCRCList);
   }
@@ -95,11 +95,11 @@ public class UpsertCompactMergeTaskExecutorTest {
     SegmentMetadataImpl segment1 = Mockito.mock(SegmentMetadataImpl.class);
     SegmentMetadataImpl segment2 = Mockito.mock(SegmentMetadataImpl.class);
 
-    Mockito.when(segment1.getCrc()).thenReturn("1000");
-    Mockito.when(segment2.getCrc()).thenReturn("3000");
+    Mockito.when(segment1.getCrc()).thenReturn(1000L);
+    Mockito.when(segment2.getCrc()).thenReturn(3000L);
 
     List<SegmentMetadataImpl> segmentMetadataList = Arrays.asList(segment1, segment2);
-    List<String> expectedCRCList = Arrays.asList("1000", "2000");
+    List<Long> expectedCRCList = List.of(1000L, 2000L);
 
     _taskExecutor.validateCRCForInputSegments(segmentMetadataList, expectedCRCList);
   }
@@ -202,19 +202,6 @@ public class UpsertCompactMergeTaskExecutorTest {
     _taskExecutor.getCommonPartitionIDForSegments(segmentMetadataList);
   }
 
-  /// Tests CRC validation with null CRC values.
-  @Test(expectedExceptions = IllegalStateException.class)
-  public void testValidateCRCForInputSegmentsWithNullCrc() {
-    SegmentMetadataImpl segment1 = Mockito.mock(SegmentMetadataImpl.class);
-    Mockito.when(segment1.getCrc()).thenReturn(null);
-    Mockito.when(segment1.getName()).thenReturn("segment1");
-
-    List<SegmentMetadataImpl> segmentMetadataList = Arrays.asList(segment1);
-    List<String> expectedCRCList = Arrays.asList("1000");
-
-    _taskExecutor.validateCRCForInputSegments(segmentMetadataList, expectedCRCList);
-  }
-
   /// Tests handling of empty segment lists.
   @Test(expectedExceptions = NoSuchElementException.class)
   public void testGetCommonPartitionIDForEmptySegmentList() {
@@ -228,11 +215,11 @@ public class UpsertCompactMergeTaskExecutorTest {
     SegmentMetadataImpl segment1 = Mockito.mock(SegmentMetadataImpl.class);
     SegmentMetadataImpl segment2 = Mockito.mock(SegmentMetadataImpl.class);
 
-    Mockito.when(segment1.getCrc()).thenReturn("1000");
-    Mockito.when(segment2.getCrc()).thenReturn("2000");
+    Mockito.when(segment1.getCrc()).thenReturn(1000L);
+    Mockito.when(segment2.getCrc()).thenReturn(2000L);
 
     List<SegmentMetadataImpl> segmentMetadataList = Arrays.asList(segment1, segment2);
-    List<String> expectedCRCList = Arrays.asList("1000"); // Only one CRC
+    List<Long> expectedCRCList = List.of(1000L); // Only one CRC
 
     _taskExecutor.validateCRCForInputSegments(segmentMetadataList, expectedCRCList);
   }
@@ -268,19 +255,6 @@ public class UpsertCompactMergeTaskExecutorTest {
     configs.put(MinionConstants.UpsertCompactMergeTask.MAX_ZK_CREATION_TIME_MILLIS_KEY, "1");
     result = _taskExecutor.getMaxZKCreationTimeFromConfig(configs);
     Assert.assertEquals(result, 1L);
-  }
-
-  /// Tests CRC validation with whitespace and empty strings.
-  @Test(expectedExceptions = IllegalStateException.class)
-  public void testValidateCRCWithEmptyString() {
-    SegmentMetadataImpl segment1 = Mockito.mock(SegmentMetadataImpl.class);
-    Mockito.when(segment1.getCrc()).thenReturn("");
-    Mockito.when(segment1.getName()).thenReturn("segment1");
-
-    List<SegmentMetadataImpl> segmentMetadataList = Arrays.asList(segment1);
-    List<String> expectedCRCList = Arrays.asList("1000");
-
-    _taskExecutor.validateCRCForInputSegments(segmentMetadataList, expectedCRCList);
   }
 
   // Helper methods for testing
